--- a/projects/aas-server/package.json
+++ b/projects/aas-server/package.json
@@ -10,8 +10,8 @@
     "scripts": {
         "tsoa": "tsoa spec-and-routes",
         "serve": "rimraf build && npm run tsoa && tsc -p tsconfig.app.json",
-        "test": "node --experimental-vm-modules --no-warnings ../../node_modules/jest/bin/jest.js -c jest.config.ts",
-        "test:debug": "node --experimental-vm-modules --no-warnings ../../node_modules/jest/bin/jest.js -c jest.config.js --runInBand --no-cache --verbose --watchAll=true",
+        "test": "node --experimental-vm-modules --no-warnings --security-revert=CVE-2023-46809 ../../node_modules/jest/bin/jest.js -c jest.config.ts",
+        "test:debug": "node --experimental-vm-modules --no-warnings --security-revert=CVE-2023-46809 ../../node_modules/jest/bin/jest.js -c jest.config.js --runInBand --no-cache --verbose --watchAll=true",
         "build": "rimraf dist && npm run tsoa && node esbuild.prod.js",
         "build:debug": "rimraf dist && npm run tsoa && node esbuild.dev.js",
         "tsc": "rimraf build && tsc -p tsconfig.json",
